2013-04-29 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bp.c,
	  support/regression/tests/bug2094505.c,
	  support/regression/tests/bug3475630.c,
	  support/regression/tests/gcc-torture-execute-20010129-1.c,
	  support/regression/tests/gcc-torture-execute-20021120-1.c,
	  support/regression/tests/gcc-torture-execute-20030916-1.c,
	  support/regression/tests/gcc-torture-execute-pr28982a.c,
	  support/regression/tests/gcc-torture-execute-20031012-1.c,
	  support/regression/tests/gcc-torture-execute-20071030-1.c,
	  support/regression/tests/gcc-torture-execute-930614-2.c,
	  support/regression/tests/gcc-torture-execute-930628-1.c,
	  support/regression/tests/gcc-torture-execute-980707-1.c,
	  support/regression/tests/gcc-torture-execute-990513-1.c,
	  STM8: Disable some regression tests that need support for extended stack operands.
	* src/stm8/gen.c:
	  STM8: Improve error reporting for unimplemented extended stack operands.

2013-04-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Fix stack handling in equality comparison, handle dead code, fix shift to zero.

2013-04-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Implement DUMMY_READ_VOLATILE.

2013-04-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Implement read from signed bit-field.

2013-04-28 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/asxxsrc/asout.c,
	  src/stm8/main.c:
	  STM8: Applied patched from Valentin Dudouyt to improve error checking in assembler, implement initialization of globals, __interrupt.

2013-04-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/main.c,
	  src/stm8/gen.c:
	  STM8: Implement multiplication.

2013-04-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Fix asmop freeing for GET_VALUE_AT_ADDRESS, do not share symbol aops to fix double free, fix large comparison, implement bit-field writes.

2013-04-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c: